--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Title goes here</title>
+	<title>Chat</title>
 	<style>
     	body { margin: 0; }
 		.transcript { 
