switched from hardcoded widths in html to flexbox

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			width: 80vw;
 			height: calc(6px + 1em);
 			
+			display: flex;
+
 			background: white; }
 		
     </style>
@@ -36,7 +38,9 @@
 
 <div class="input">
 
-<input type="text" id="input" style="width:calc(100% - 16px - 10px - 4ch - 10px);margin:0 10px 0 0"/><button type="button" onclick="send()">Send</button>
+<input type="text" id="input" style="width:100%;margin:0 10px 0 0"/>
+
+<button type="button" onclick="send()">Send</button>
 
 </div>
 
