--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8" />
 	<title>Chat</title>
 	<style>
+		:root {
+			color-scheme: light dark;
+		}
+
 		body {
 			margin: 0;
 		}
@@ -16,20 +20,18 @@
 
 		.transcript {
 			padding: 10px;
-			border: 3px solid black;
+			border: 3px solid;
 			margin: 10px auto;
 
 			width: 90vw;
 			height: calc(100vh - 6px - 1em - (4 * 10px) - (4 * 3px) - (3 * 10px));
 
 			overflow-y: scroll;
-
-			background: white;
 		}
 
 		.input {
 			padding: 10px;
-			border: 3px solid black;
+			border: 3px solid;
 			margin: 10px auto;
 
 			width: 80vw;
@@ -37,8 +39,6 @@
 
 			display: flex;
 			gap: 10px;
-
-			background: white;
 		}
 	</style>
 
